# MVZKP-Implementation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
circuits/bristol_fashion/: ANDgen.py  ANDgen_bool.py  ands_bool.txt  arith_circuit.txt  arith_gen.py  simple.txt
mv-qsvole/: CMakeLists.txt  mvqsvole_arith.h  mvqsvole_bool_iknp.h  mvqsvole_bool_pcg.h  prog_base_svole.h  prog_vole.h
mv-svole/: CMakeLists.txt  mvsvole_arith.h  mvsvole_bool_iknp.h  mvsvole_bool_pcg.h  prog_base_cot.h  prog_base_svole.h  prog_vole.h
mvzkp/: CMakeLists.txt  mvzkp_arith.h  mvzkp_bool_iknp.h  mvzkp_bool_pcg.h  test_mvzkp.h
script/: batchrun.sh  run_3  run_4
sif/: 1r_sif_arith.h  1r_sif_bool_iknp.h  1r_sif_bool_pcg.h  2r_sif_bool.h  CMakeLists.txt  test_sif.h
test/: CMakeLists.txt  aes_2r.cc  aes_iknp.cc  aes_wrk.cc  and_arith.cc  and_iknp.cc  and_pcg.cc  sha_iknp.cc
